2012-02-27  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/integria_incidents/incident.php: added error message when
	Pandora have a bad conf for the Integria API. And cleaned source code style.
	
	* general/footer.php, general/logon_ok.php, general/noaccess.php,
	general/shortcut_bar.php, general/ui/agents_list.php,
	godmode/alerts/alert_templates.php,
	godmode/alerts/configure_alert_action.php,
	godmode/reporting/map_builder.php, godmode/tag/edit_tag.php: cleaned source
	code style.

2012-02-28 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/estado_ultimopaquete.php: Fixed bug in this view
	When a module is in a unknown status shows "NeverUnknown" instead of 
	"Unknow".
	
	Fixes: #3487321

2012-02-28 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events_list.php
	 operation/events/events.php: Changed validation and set in process
	 to javascript code (pending fixes in this feature).
	 
	 Fixes: #3487339

2012-02-27  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_events.php: Fixed an include path.

2012-02-27 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php: Added avg_only option to boolean 
	graphs, string graphs have more space between elements in legend,
	added units to all graphs.
	* include/graphs/functions_fsgraph.php: Added unit to flash chart
	of type 2D column.
	* include/graphs/fgraph.php: Added unit to static version.
	* include/functions_forecast.php: Fixed division by zero in 
	projection graphs when all data is zero.
	* operation/agentes/stat_win.php: Added avg_only option for boolean
	graph. 

2012-02-27  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/agentes/agent_template.php: Fixed bug: values 'max_warning',
	'min_warning', 'max_critical', 'min_critical', 'postprocess' aren't saved in
	the application template.

2012-02-27  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/modules/manage_network_components.php: Fixed bug: values max and min